// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot: hello.md 1`] = `"<_Fragment set:html={"<h1 id=\\"hello-from-markflow\\">Hello from Markflow</h1><p>This is a simple markdown document used for smoke testing the Node bindings.</p><ul><li>Streams input through the Rust parser</li><li>Exercises the lol_html rewriter</li><li>Confirms napi-rs plumbing works end-to-end</li></ul><p><img src=\\"https://example.com/kitten.png\\" alt=\\"kitten\\" /></p>"} />"`;

exports[`snapshot: hello.md 2`] = `
[
  {
    "depth": 1,
    "slug": "hello-from-markflow",
    "text": "Hello from Markflow",
  },
]
`;

exports[`snapshot: table.md 1`] = `"<_Fragment set:html={"<table><thead><tr><th align=\\"left\\">Column</th><th align=\\"right\\">Value</th></tr></thead><tbody><tr><td align=\\"left\\">$x$</td><td align=\\"right\\">$$y$$</td></tr></tbody></table>"} />"`;

exports[`snapshot: slug_duplicates.md 1`] = `"<_Fragment set:html={"<h1 id=\\"heading\\">Heading</h1><h2 id=\\"heading-1\\">Heading</h2><h2 id=\\"heading-2\\">Heading</h2><h1 id=\\"heading-3\\">Heading</h1>"} />"`;

exports[`snapshot: slug_duplicates.md 2`] = `
[
  {
    "depth": 1,
    "slug": "heading",
    "text": "Heading",
  },
  {
    "depth": 2,
    "slug": "heading-1",
    "text": "Heading",
  },
  {
    "depth": 2,
    "slug": "heading-2",
    "text": "Heading",
  },
  {
    "depth": 1,
    "slug": "heading-3",
    "text": "Heading",
  },
]
`;

exports[`snapshot: footnotes.md 1`] = `"<_Fragment set:html={"<p>Here is a sentence with a footnote<sup><a href=\\"#user-content-fn-1\\" id=\\"user-content-fnref-1\\" data-footnote-ref aria-describedby=\\"footnote-label\\">1</a></sup> and another<sup><a href=\\"#user-content-fn-note\\" id=\\"user-content-fnref-note\\" data-footnote-ref aria-describedby=\\"footnote-label\\">2</a></sup>.</p><h2 id=\\"heading-with-footnote\\">Heading with footnote<sup><a href=\\"#user-content-fn-2\\" id=\\"user-content-fnref-2\\" data-footnote-ref aria-describedby=\\"footnote-label\\">3</a></sup></h2><p>Some more text.</p>"} /><_Fragment set:html={"<section data-footnotes class=\\"footnotes\\"><h2 class=\\"sr-only\\" id=\\"footnote-label\\">Footnotes</h2><ol><li id=\\"user-content-fn-1\\"><p>This is the first footnote.</p> <a href=\\"#user-content-fnref-1\\" data-footnote-backref class=\\"footnote-backref\\" aria-label=\\"Back to reference\\">↩</a></li><li id=\\"user-content-fn-note\\"><p>This is a named footnote with <strong>bold</strong> text.</p> <a href=\\"#user-content-fnref-note\\" data-footnote-backref class=\\"footnote-backref\\" aria-label=\\"Back to reference\\">↩</a></li><li id=\\"user-content-fn-2\\"><p>Footnote for the heading section.</p> <a href=\\"#user-content-fnref-2\\" data-footnote-backref class=\\"footnote-backref\\" aria-label=\\"Back to reference\\">↩</a></li></ol></section>"} />"`;

exports[`snapshot: footnotes.md 2`] = `
[
  {
    "depth": 2,
    "slug": "heading-with-footnote",
    "text": "Heading with footnote",
  },
]
`;

exports[`snapshot: gfm_full.md 1`] = `"<_Fragment set:html={"<h1 id=\\"gfm-full-feature-test\\">GFM Full Feature Test</h1><h2 id=\\"tables\\">Tables</h2><table><thead><tr><th align=\\"left\\">Feature</th><th align=\\"center\\">Status</th></tr></thead><tbody><tr><td align=\\"left\\">Tables</td><td align=\\"center\\">✓</td></tr><tr><td align=\\"left\\"><strong>Bold in table</strong></td><td align=\\"center\\">✓</td></tr></tbody></table><h2 id=\\"task-lists\\">Task Lists</h2><ul><li class=\\"task-list-item\\"><label><input type=\\"checkbox\\" disabled checked/><span>Completed task</span></label></li><li class=\\"task-list-item\\"><label><input type=\\"checkbox\\" disabled/><span>Incomplete task</span></label></li><li>Regular item</li></ul><h2 id=\\"strikethrough\\">Strikethrough</h2><p>This is <del>deleted</del> text.</p><h2 id=\\"autolinks\\">Autolinks</h2><p>Visit <a href=\\"https://example.com\\">https://example.com</a> for more info.</p><h2 id=\\"footnotes\\">Footnotes</h2><p>Here is text with a footnote<sup><a href=\\"#user-content-fn-1\\" id=\\"user-content-fnref-1\\" data-footnote-ref aria-describedby=\\"footnote-label\\">1</a></sup>.</p><h2 id=\\"custom-id\\">Custom Heading ID</h2><h2 id=\\"duplicate-heading\\">Duplicate heading</h2><h2 id=\\"duplicate-heading-1\\">Duplicate heading</h2>"} /><_Fragment set:html={"<section data-footnotes class=\\"footnotes\\"><h2 class=\\"sr-only\\" id=\\"footnote-label\\">Footnotes</h2><ol><li id=\\"user-content-fn-1\\"><p>The footnote content.</p> <a href=\\"#user-content-fnref-1\\" data-footnote-backref class=\\"footnote-backref\\" aria-label=\\"Back to reference\\">↩</a></li></ol></section>"} />"`;

exports[`snapshot: gfm_full.md 2`] = `
[
  {
    "depth": 1,
    "slug": "gfm-full-feature-test",
    "text": "GFM Full Feature Test",
  },
  {
    "depth": 2,
    "slug": "tables",
    "text": "Tables",
  },
  {
    "depth": 2,
    "slug": "task-lists",
    "text": "Task Lists",
  },
  {
    "depth": 2,
    "slug": "strikethrough",
    "text": "Strikethrough",
  },
  {
    "depth": 2,
    "slug": "autolinks",
    "text": "Autolinks",
  },
  {
    "depth": 2,
    "slug": "footnotes",
    "text": "Footnotes",
  },
  {
    "depth": 2,
    "slug": "custom-id",
    "text": "Custom Heading ID",
  },
  {
    "depth": 2,
    "slug": "duplicate-heading",
    "text": "Duplicate heading",
  },
  {
    "depth": 2,
    "slug": "duplicate-heading-1",
    "text": "Duplicate heading",
  },
]
`;

exports[`snapshot: aside_directive.md 1`] = `"<Aside {...{"title": "Heads", "type": "note"}}><_Fragment set:html={"<p>Body of directive aside.</p>"} /></Aside>"`;

exports[`snapshot: directives with attributes 1`] = `"<Aside {...{"title": "Important Notice", "type": "note"}}><_Fragment set:html={"<p>This is <strong>important</strong> content with a <a href=\\"https://example.com\\">link</a>.</p>"} /></Aside><Aside {...{"type": "warning"}}><_Fragment set:html={"<p>Be careful!</p>"} /></Aside><Aside {...{"type": "tip"}}><_Fragment set:html={"<p>A tip with attributes.</p>"} /></Aside>"`;

exports[`snapshot: task lists 1`] = `"<_Fragment set:html={"<ul><li class=\\"task-list-item\\"><label><input type=\\"checkbox\\" disabled checked/><span>Completed task</span></label></li><li class=\\"task-list-item\\"><label><input type=\\"checkbox\\" disabled/><span>Incomplete task</span></label></li><li>Regular list item</li></ul><ol><li class=\\"task-list-item\\"><label><input type=\\"checkbox\\" disabled checked/><span>Ordered checked</span></label></li><li class=\\"task-list-item\\"><label><input type=\\"checkbox\\" disabled/><span>Ordered unchecked</span></label></li></ol>"} />"`;

exports[`snapshot: custom heading IDs 1`] = `"<_Fragment set:html={"<h1 id=\\"custom-first\\">First Heading</h1><h2 id=\\"second-heading\\">Second Heading</h2><h2 id=\\"second-heading-1\\">Second Heading</h2><h3 id=\\"bold-heading\\">Third with <strong>bold</strong></h3>"} />"`;

exports[`snapshot: custom heading IDs 2`] = `
[
  {
    "depth": 1,
    "slug": "custom-first",
    "text": "First Heading",
  },
  {
    "depth": 2,
    "slug": "second-heading",
    "text": "Second Heading",
  },
  {
    "depth": 2,
    "slug": "second-heading-1",
    "text": "Second Heading",
  },
  {
    "depth": 3,
    "slug": "bold-heading",
    "text": "Third with bold",
  },
]
`;

exports[`snapshot: simple MDX compilation 1`] = `
"import { Fragment as _Fragment, jsx as _jsx, jsxs as _jsxs } from "astro/jsx-runtime";
function _createMdxContent(props) {
    const _components = Object.assign({
        h1: "h1",
        p: "p",
        strong: "strong",
        em: "em",
        ul: "ul",
        li: "li"
    }, props.components);
    return _jsxs(_Fragment, {
        children: [
            _jsx(_components.h1, {
                children: "Hello MDX"
            }),
            "\\n",
            _jsxs(_components.p, {
                children: [
                    "This is ",
                    _jsx(_components.strong, {
                        children: "bold"
                    }),
                    " and ",
                    _jsx(_components.em, {
                        children: "italic"
                    }),
                    "."
                ]
            }),
            "\\n",
            _jsxs(_components.ul, {
                children: [
                    "\\n",
                    _jsx(_components.li, {
                        children: "Item 1"
                    }),
                    "\\n",
                    _jsx(_components.li, {
                        children: "Item 2"
                    }),
                    "\\n"
                ]
            })
        ]
    });
}
function MDXContent(props = {}) {
    const { wrapper: MDXLayout } = props.components || {};
    return MDXLayout ? _jsx(MDXLayout, Object.assign({}, props, {
        children: _jsx(_createMdxContent, props)
    })) : _createMdxContent(props);
}
export default MDXContent;
"
`;

exports[`snapshot: simple MDX compilation 2`] = `
[
  {
    "depth": 1,
    "slug": "hello-mdx",
    "text": "Hello MDX",
  },
]
`;

exports[`snapshot: MDX with task lists 1`] = `
"import { Fragment as _Fragment, jsx as _jsx, jsxs as _jsxs } from "astro/jsx-runtime";
function _createMdxContent(props) {
    const _components = Object.assign({
        h1: "h1",
        ul: "ul",
        li: "li",
        input: "input"
    }, props.components);
    return _jsxs(_Fragment, {
        children: [
            _jsx(_components.h1, {
                children: "Tasks"
            }),
            "\\n",
            _jsxs(_components.ul, {
                className: "contains-task-list",
                children: [
                    "\\n",
                    _jsxs(_components.li, {
                        className: "task-list-item",
                        children: _jsx("label", { children: [_jsx(_components.input, {
                                type: "checkbox",
                                checked: true,
                                disabled: true
                            }), _jsx("span", { children: [" ",
                            "Done"] })] })
                    }),
                    "\\n",
                    _jsxs(_components.li, {
                        className: "task-list-item",
                        children: _jsx("label", { children: [_jsx(_components.input, {
                                type: "checkbox",
                                disabled: true
                            }), _jsx("span", { children: [" ",
                            "Todo"] })] })
                    }),
                    "\\n"
                ]
            })
        ]
    });
}
function MDXContent(props = {}) {
    const { wrapper: MDXLayout } = props.components || {};
    return MDXLayout ? _jsx(MDXLayout, Object.assign({}, props, {
        children: _jsx(_createMdxContent, props)
    })) : _createMdxContent(props);
}
export default MDXContent;
"
`;

exports[`snapshot: MDX with directives 1`] = `
"import { Fragment as _Fragment, jsx as _jsx, jsxs as _jsxs } from "astro/jsx-runtime";
function _createMdxContent(props) {
    const _components = Object.assign({
        h1: "h1",
        p: "p"
    }, props.components), { Aside } = _components;
    if (!Aside) _missingMdxReference("Aside", true);
    return _jsxs(_Fragment, {
        children: [
            _jsx(_components.h1, {
                children: "Guide"
            }),
            "\\n",
            _jsx(Aside, {
                "data-mf-source": "directive",
                type: "note",
                title: "Pay Attention",
                children: _jsx(_components.p, {
                    children: "This is important."
                })
            }),
            "\\n",
            _jsx(Aside, {
                "data-mf-source": "directive",
                type: "warning",
                children: _jsx(_components.p, {
                    children: "Danger ahead!"
                })
            })
        ]
    });
}
function MDXContent(props = {}) {
    const { wrapper: MDXLayout } = props.components || {};
    return MDXLayout ? _jsx(MDXLayout, Object.assign({}, props, {
        children: _jsx(_createMdxContent, props)
    })) : _createMdxContent(props);
}
export default MDXContent;
function _missingMdxReference(id, component) {
    throw new Error("Expected " + (component ? "component" : "object") + " \`" + id + "\` to be defined: you likely forgot to import, pass, or provide it.");
}
"
`;

exports[`snapshot: compileBatchToModule for markdown 1`] = `
"import { Fragment, jsx as __jsx } from 'astro/jsx-runtime';
const _Fragment = Fragment;
const _jsx = (type, props, ...children) => {
  const resolved = props ?? {};
  if (children.length > 0) {
    resolved.children = children.length === 1 ? children[0] : children;
  }
  return __jsx(type, resolved, resolved.key);
};
import { createComponent, renderJSX } from 'astro/runtime/server/index.js';
export const frontmatter = {};
export const file = "/batch.md";
export const url = undefined;
export const headings = [{"depth":1,"slug":"batch-test","text":"Batch Test"}];
export function getHeadings() {
  return [{"depth":1,"slug":"batch-test","text":"Batch Test"}];
}
const __markflowRenderProfileEnabled = typeof process !== 'undefined' && process.env?.MARKFLOW_RENDER_PROFILE === '1';
const __markflowRenderProfile = __markflowRenderProfileEnabled ? (() => {
  const key = '__markflowRenderProfile';
  const g = globalThis;
  const existing = g[key];
  if (existing) return existing;
  const profile = {
    totals: new Map(),
    counts: new Map(),
    hooked: false,
    dumped: false,
    top: Number((typeof process !== 'undefined' && process.env?.MARKFLOW_RENDER_PROFILE_TOP) ? process.env.MARKFLOW_RENDER_PROFILE_TOP : '20'),
  };
  g[key] = profile;
  if (typeof process !== 'undefined' && typeof process.on === 'function' && !profile.hooked) {
    profile.hooked = true;
    const dump = () => {
      if (profile.dumped) return;
      profile.dumped = true;
      const entries = Array.from(profile.totals.entries()).map(([id, total]) => {
        const count = profile.counts.get(id) ?? 0;
        return { id, total, count, avg: count > 0 ? total / count : 0 };
      });
      entries.sort((a, b) => b.total - a.total);
      const top = entries.slice(0, profile.top);
      const total = entries.reduce((acc, entry) => acc + entry.total, 0);
      console.log(\`[markflow-render-profiler] total=\${total.toFixed(2)}ms pages=\${entries.length}\`);
      for (const entry of top) {
        console.log(\`[markflow-render-profiler] \${entry.id} total=\${entry.total.toFixed(2)}ms avg=\${entry.avg.toFixed(2)}ms n=\${entry.count}\`);
      }
    };
    process.on('beforeExit', dump);
    process.on('exit', dump);
  }
  return profile;
})() : null;
const __markflowRenderTotals = __markflowRenderProfile ? __markflowRenderProfile.totals : null;
const __markflowRenderCounts = __markflowRenderProfile ? __markflowRenderProfile.counts : null;
const __markflowRenderNow = () => (globalThis.performance && typeof globalThis.performance.now === 'function') ? globalThis.performance.now() : Date.now();
// function xmdxContent
const xmdxContent = createComponent((result, props) => {
  if (__markflowRenderProfileEnabled) {
    const __markflowStart = __markflowRenderNow();
    const __markflowOut = renderJSX(result, (
    <>
<_Fragment set:html={"<h1 id=\\"batch-test\\">Batch Test</h1><p>Paragraph with <strong>bold</strong> and <a href=\\"https://example.com\\">link</a>.</p>"} /><_Fragment set:html={"<pre class=\\"astro-code\\" tabindex=\\"0\\"><code class=\\"language-js\\">const x = 1;</code></pre>"} />
    </>
    ));
    const __markflowDuration = __markflowRenderNow() - __markflowStart;
    __markflowRenderTotals.set(file, (__markflowRenderTotals.get(file) ?? 0) + __markflowDuration);
    __markflowRenderCounts.set(file, (__markflowRenderCounts.get(file) ?? 0) + 1);
    return __markflowOut;
  }
  return renderJSX(result, (
    <>
<_Fragment set:html={"<h1 id=\\"batch-test\\">Batch Test</h1><p>Paragraph with <strong>bold</strong> and <a href=\\"https://example.com\\">link</a>.</p>"} /><_Fragment set:html={"<pre class=\\"astro-code\\" tabindex=\\"0\\"><code class=\\"language-js\\">const x = 1;</code></pre>"} />
    </>
  ));
}, file);
export const Content = xmdxContent;
Content[Symbol.for('mdx-component')] = true;
Content[Symbol.for('astro.needsHeadRendering')] = !Boolean(frontmatter.layout);
Content.moduleId = "/batch.md";
export default xmdxContent;
"
`;

exports[`snapshot: compileBatchToModule for markdown 2`] = `
[
  {
    "depth": 1,
    "slug": "batch-test",
    "text": "Batch Test",
  },
]
`;
